# 0410 스토어리스트 / 푸드 리스트 / 스토어 컨트롤러 변경

--- a/src/main/webapp/resources/css/store.css
+++ b/src/main/webapp/resources/css/store.css
@@ -262,3 +262,27 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   text-align: center;
 }
 
+body, h1, h2, h3, h4, h5, h6 {
+	font-family: "Lato", sans-serif
+}
+
+.w3-bar, h1, button {
+	font-family: "Montserrat", sans-serif
+}
+
+.fa-anchor, .fa-coffee {
+	font-size: 200px
+}
+.restImg{
+	background-image: url("../img/restaurant-1.jpg");
+	background-size: 100%;
+}
+.storeTitle{
+	color: white;
+	font-weight: bold;
+}
+#logo{
+	height: 50px;
+	padding-left: 30px;
+}
+
